Fixed scrolling nav menu not working on iPhone browsers

--- a/assets/scss/components/stencil/navPages/_navPages.scss
+++ b/assets/scss/components/stencil/navPages/_navPages.scss
@@ -60,7 +60,6 @@
     &.is-open {
         display: block;
         padding-top: $header-height;
-        z-index: -1;
     }
 }
 
